・HashMapを用いたコマンド読み込み動作の見直し ・ストリームの大体の流れを記述する抽象クラスCommandStreamingの追加 ・BAN、UNBAN機能の追加 ・update_nameにおける禁止ワードの追加 ・禁止ワードの追加と削除を行うコマンドの追加 ・shutdownコマンドの追加 ・非推奨としたToolsLoader.replyの使用を中止